instance de debuug photo url vide